--- a/rpcs3/VKGSRender.vcxproj.filters
+++ b/rpcs3/VKGSRender.vcxproj.filters
@@ -199,6 +199,7 @@
     <ClInclude Include="Emu\RSX\VK\vkutils\swapchain_core.h">
       <Filter>vkutils</Filter>
     </ClInclude>
+    <ClInclude Include="Emu\RSX\VK\VKProcTable.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="vkutils">
