virtual Logitech G27 for Gran Turismo 6

--- a/rpcs3/Emu/CMakeLists.txt
+++ b/rpcs3/Emu/CMakeLists.txt
@@ -418,6 +418,8 @@ target_sources(rpcs3_emu PRIVATE
     Io/usb_device.cpp
     Io/usb_vfs.cpp
     Io/usio.cpp
+    Io/LogitechG27.cpp
+    Io/LogitechG27Config.cpp
 )
 
 # Np
