--- a/rpcs3/rpcs3.vcxproj.filters
+++ b/rpcs3/rpcs3.vcxproj.filters
@@ -1415,6 +1415,9 @@
     <ClInclude Include="rpcs3qt\video_label.h">
       <Filter>Gui\widgets</Filter>
     </ClInclude>
+    <ClInclude Include="rpcs3qt\hex_validator.h">
+      <Filter>Gui\utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="debug\moc_predefs.h.cbt">
