--- a/rpcs3/rpcs3.vcxproj.filters
+++ b/rpcs3/rpcs3.vcxproj.filters
@@ -1197,6 +1197,9 @@
     <ClCompile Include="rpcs3qt\video_label.cpp">
       <Filter>Gui\widgets</Filter>
     </ClCompile>
+    <ClCompile Include="rpcs3.cpp">
+      <Filter>rpcs3</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Input\ds4_pad_handler.h">
