CI: Move linux unit test to separate build step

--- a/.ci/docker.env
+++ b/.ci/docker.env
@@ -3,11 +3,14 @@ CI_HAS_ARTIFACTS
 BUILD_REASON
 BUILD_SOURCEVERSION
 BUILD_ARTIFACTSTAGINGDIRECTORY
+BUILD_BUILDDIRECTORY
 BUILD_REPOSITORY_NAME
 BUILD_SOURCEBRANCHNAME
 APPDIR
 ARTDIR
+BUILDDIR
 RELEASE_MESSAGE
+BUILD_UNIT_TESTS
 RUN_UNIT_TESTS
 # Variables for build matrix
 COMPILER
