tests: Fix failing test and improve msvc setup

--- a/rpcs3/CMakeLists.txt
+++ b/rpcs3/CMakeLists.txt
@@ -201,6 +201,7 @@ elseif(BUILD_RPCS3_TESTS)
         PRIVATE
             tests/test.cpp
             tests/test_fmt.cpp
+            tests/test_simple_array.cpp
     )
 
     target_link_libraries(rpcs3_test
