Cleanup what we build in glslang vcxproj

--- a/.github/workflows/rpcs3.yml
+++ b/.github/workflows/rpcs3.yml
@@ -178,7 +178,7 @@ jobs:
 
       - name: Compile glslang
         shell: pwsh
-        run: msbuild 3rdparty/glslang/glslang.vcxproj /p:SolutionDir="${{ github.workspace }}" /p:Configuration=Release /v:minimal /p:Platform=x64 /p:PreferredToolArchitecture=x64 /p:CLToolPath=${{ env.CCACHE_BIN_DIR }} /p:UseMultiToolTask=true /p:CustomAfterMicrosoftCommonTargets="${{ github.workspace }}\buildfiles\msvc\ci_only.targets"
+        run: msbuild 3rdparty/glslang/glslang.vcxproj /p:SolutionDir="${{ github.workspace }}\" /p:Configuration=Release /v:minimal /p:Platform=x64 /p:PreferredToolArchitecture=x64 /p:CLToolPath=${{ env.CCACHE_BIN_DIR }} /p:UseMultiToolTask=true /p:CustomAfterMicrosoftCommonTargets="${{ github.workspace }}\buildfiles\msvc\ci_only.targets"
       
       - name: Compile RPCS3
         shell: pwsh
