Fix building with SDL submodule

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -208,6 +208,29 @@ endif()
 # AsmJit
 add_subdirectory(asmjit EXCLUDE_FROM_ALL)
 
+# SDL3
+set(SDL3_TARGET 3rdparty_dummy_lib)
+if(USE_SDL)
+	if(USE_SYSTEM_SDL)
+		find_package(SDL3)
+		if(SDL3_FOUND AND SDL3_VERSION VERSION_GREATER_EQUAL 3.2.0)
+			message(STATUS "Using system SDL3 version '${SDL3_VERSION}'")
+			add_library(3rdparty_sdl3 INTERFACE)
+			target_compile_definitions(3rdparty_sdl3 INTERFACE -DHAVE_SDL3=1)
+			target_link_libraries(3rdparty_sdl3 INTERFACE SDL3::SDL3)
+			set(SDL3_TARGET 3rdparty_sdl3)
+		else()
+			message(FATAL_ERROR "SDL3 is not available on this system")
+		endif()
+	else()
+		message(STATUS "Using static SDL3 from 3rdparty")
+		add_subdirectory(libsdl-org EXCLUDE_FROM_ALL)
+		target_compile_definitions(SDL3-static INTERFACE -DHAVE_SDL3=1)
+		set(SDL3_TARGET SDL3-static)
+		set(SDL3_DIR "${CMAKE_CURRENT_BINARY_DIR}/libsdl-org/SDL" CACHE STRING "")
+	endif()
+endif()
+
 # OpenAL
 if (NOT ANDROID)
 	add_subdirectory(OpenAL EXCLUDE_FROM_ALL)
@@ -222,31 +245,31 @@ if(USE_FAUDIO)
 	# FAudio depends on SDL3
 	find_package(SDL3)
 	if (USE_SYSTEM_FAUDIO)
-		if (NOT SDL3_FOUND OR SDL3_VERSION VERSION_LESS 3.2.0)
-			message(WARNING
-				"RPCS3: System FAudio requires SDL 3.2.0 or newer. Since a valid SDL3"
-				">=3.2.0 version cannot be found, building with FAudio will be skipped.")
-			set(USE_FAUDIO OFF CACHE BOOL "Disabled using system FAudio with SDL < 3.2.0" FORCE)
-		else()
+		if (SDL3_FOUND AND SDL3_VERSION VERSION_GREATER_EQUAL 3.2.0)
 			message(STATUS "RPCS3: Using system FAudio")
 			find_package(FAudio REQUIRED CONFIGS FAudioConfig.cmake FAudio-config.cmake)
 			add_library(3rdparty_FAudio INTERFACE)
 			target_link_libraries(3rdparty_FAudio INTERFACE FAudio)
 			target_compile_definitions(3rdparty_FAudio INTERFACE -DHAVE_FAUDIO)
 			set(FAUDIO_TARGET 3rdparty_FAudio)
+		else()
+			message(WARNING
+				"RPCS3: System FAudio requires SDL 3.2.0 or newer. Since a valid SDL3"
+				">=3.2.0 version cannot be found, building with FAudio will be skipped.")
+			set(USE_FAUDIO OFF CACHE BOOL "Disabled using system FAudio with SDL < 3.2.0" FORCE)
 		endif()
 	else()
-		if (NOT SDL3_FOUND OR SDL3_VERSION VERSION_LESS 3.2.0)
-			message(WARNING
-				"-- RPCS3: 3rdparty FAudio requires SDL 3.2.0 or newer. Since a valid SDL3"
-				">=3.2.0 version cannot be found, building with FAudio will be skipped.")
-			set(USE_FAUDIO OFF CACHE BOOL "Disabled FAudio with SDL < 3.2.0" FORCE)
-		else()
+		if (SDL3_FOUND AND SDL3_VERSION VERSION_GREATER_EQUAL 3.2.0)
 			message(STATUS "RPCS3: Using builtin FAudio")
 			set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build shared library")
 			add_subdirectory(FAudio EXCLUDE_FROM_ALL)
 			target_compile_definitions(FAudio-static INTERFACE -DHAVE_FAUDIO)
 			set(FAUDIO_TARGET FAudio-static)
+		else()
+			message(FATAL_ERROR
+				"-- RPCS3: 3rdparty FAudio requires SDL 3.2.0 or newer. Since a valid SDL3"
+				">=3.2.0 version cannot be found, building with FAudio will be skipped.")
+			set(USE_FAUDIO OFF CACHE BOOL "Disabled FAudio with SDL < 3.2.0" FORCE)
 		endif()
 	endif()
 endif()
@@ -314,29 +337,6 @@ add_subdirectory(wolfssl EXCLUDE_FROM_ALL)
 
 # CURL
 add_subdirectory(curl EXCLUDE_FROM_ALL)
-
-# SDL3
-set(SDL3_TARGET 3rdparty_dummy_lib)
-if(USE_SDL)
-	if(USE_SYSTEM_SDL)
-		find_package(SDL3)
-		if(SDL3_FOUND AND NOT SDL3_VERSION VERSION_LESS 3.2.0)
-			message(STATUS "Using system SDL3 version '${SDL3_VERSION}'")
-			add_library(3rdparty_sdl3 INTERFACE)
-			target_compile_definitions(3rdparty_sdl3 INTERFACE -DHAVE_SDL3=1)
-			target_link_libraries(3rdparty_sdl3 INTERFACE SDL3::SDL3)
-			set(SDL3_TARGET 3rdparty_sdl3)
-		else()
-			message(FATAL_ERROR "SDL3 is not available on this system")
-		endif()
-	else()
-		message(STATUS "Using static SDL3 from 3rdparty")
-		add_library(3rdparty_sdl3 INTERFACE)
-		target_compile_definitions(3rdparty_sdl3 INTERFACE -DHAVE_SDL3=1)
-		add_subdirectory(libsdl-org EXCLUDE_FROM_ALL)
-		set(SDL3_TARGET 3rdparty_sdl3)
-	endif()
-endif()
 
 # MINIUPNP
 add_subdirectory(miniupnp EXCLUDE_FROM_ALL)
