--- a/rpcs3/tests/rpcs3_test.vcxproj
+++ b/rpcs3/tests/rpcs3_test.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="test.cpp" />
     <ClCompile Include="test_fmt.cpp" />
     <ClCompile Include="test_simple_array.cpp" />
+    <ClCompile Include="test_address_range.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" Condition="'$(GTestInstalled)' == 'true'">
