Readd Homebrew Cache (used to be on Cirrus), silence more warnings

--- a/.github/workflows/rpcs3.yml
+++ b/.github/workflows/rpcs3.yml
@@ -144,6 +144,14 @@ jobs:
           restore-keys: | 
             ${{ runner.os }}-ccache-${{ matrix.name }}-
 
+      - name: Setup Homebrew Cache
+        uses: actions/cache@main
+        with:
+          path: "~/Library/Caches/Homebrew"
+          key: ${{ runner.os }}-homebrew-${{ matrix.name }}
+          restore-keys: | 
+            ${{ runner.os }}-homebrew-${{ matrix.name }}
+
       - name: Setup Qt Cache
         uses: actions/cache@main
         with:
